updated Chinese (Simplified) translation

--- a/po/wesnoth-ai/zh_CN.po
+++ b/po/wesnoth-ai/zh_CN.po
@@ -1,5 +1,5 @@
 # The Battle for Wesnoth - Simplified Chinese Translations
-# Copyright (C) 2005-2018 Wesnoth development team
+# Copyright (C) 2005-2019 Wesnoth development team
 # This file is distributed under the same license as the Battle for Wesnoth package.
 # Automatically generated, 2013.
 # CloudiDust <cloudidust@gmail.com>, 2015.
@@ -8,9 +8,9 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: wesnoth-1.14\n"
-"Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
+"Report-Msgid-Bugs-To: https://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2018-03-17 18:29 UTC\n"
-"PO-Revision-Date: 2018-07-08 20:29+0800\n"
+"PO-Revision-Date: 2019-02-04 17:27+0800\n"
 "Last-Translator: CloudiDust <cloudidust@gmail.com>\n"
 "Language-Team: Wesnoth Simplified Chinese Team\n"
 "Language: zh_CN\n"
@@ -18,7 +18,7 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=n>1;\n"
-"X-Generator: Poedit 2.0.8\n"
+"X-Generator: Poedit 2.2.1\n"
 
 #. [ai]: id=ai_default_rca
 #: data/ai/ais/ai_default_rca.cfg:9
@@ -142,13 +142,13 @@ msgid ""
 "[micro_ai] tag. Check out the <span color='#00A000'>Micro AI wiki page</"
 "span> at https://wiki.wesnoth.org/Micro_AIs for more information."
 msgstr ""
-"这是主线战役“王座继承人”中“精灵受困”场景的再演绎，区别只在于此处是AI在控制科"
-"纳德的阵营。目标是移动科纳德至西北方路标处，同时要确保科纳德和德法多都存活。"
-"此处使用的AI与<b>保护单位<b>场景中使用的AI相同。\n"
+"这是主线战役<b>王座继承人</b>中<b>精灵受困</b>场景的再演绎，区别只在于此处是"
+"AI在控制科纳德的阵营。目标是移动科纳德至西北方路标处，同时要确保科纳德和德法"
+"多都存活。此处使用的AI与<b>保护单位</b>场景中使用的AI相同。\n"
 "\n"
-"注：保护单位AI是作为微AI来编写的。微AI可以只使用WML和[micro_ai]标签来加入到场"
-"景中，并根据场景的需要进行适配。请参阅https://wiki.wesnoth.org/Micro_AIs处的"
-"<span color='#00A000'>微AI维基页面</span>以获得更多信息。"
+"注：保护单位AI是作为微AI来编写的。仅使用WML和[micro_ai]标签即可很容易地将微AI"
+"加入场景中，并根据场景的需要进行适配。请查看<span color='#00A000'>微AI的wiki"
+"页面</span>（https://wiki.wesnoth.org/Micro_AIs）以获得更多信息。"
 
 #. [event]
 #: data/ai/micro_ais/scenarios/The_Elves_Besieged.cfg:222
@@ -242,7 +242,7 @@ msgstr ""
 "逼入绝境（但不总是非常成功），但容易被其它靠近狩猎范围的猎物分散注意力。狼群"
 "试图远离熊、蜘蛛、狗和雪人的攻击范围，除非它们要进攻这些生物。如果你让它们行"
 "动足够长的时间，那么他们也会意识到攻击长牙幼兽是有害健康的。当鹿都死光时，他"
-"们会随意游荡。注意，不同于多狼群AI（该AI用在另一个场景中），此狼群AI将狼阵营"
+"们会随意游荡。注意，不同于多狼群AI（该AI用在另一幕场景中），此狼群AI将狼阵营"
 "中的所有狼都归入同一个狼群中。"
 
 #: data/ai/micro_ais/scenarios/animals.cfg:12
@@ -438,8 +438,8 @@ msgid ""
 "[micro_ai] tag. Check out the <span color='#00A000'>Micro AI wiki page</"
 "span> at https://wiki.wesnoth.org/Micro_AIs for more information."
 msgstr ""
-"场景中可以包含由人类控制的阵营1，以使行动每回合停止一次，供四处观察（或使用调"
-"试模式搞事）。\n"
+"场景中可以包含由人类控制的阵营1，以使行动每回合停止一次，供四处观察（或在调试"
+"模式里搞事）。\n"
 "\n"
 "注意此场景是不会结束的。为了便于演示，在每回合开始时，任何一个被杀死的单位都"
 "会被同类型的一个新单位替代。有个右击选项可以结束此场景——但那仅仅在人类控制模"
@@ -548,7 +548,7 @@ msgid ""
 "possible. Do you want to play the orc side or let the default (RCA) AI do "
 "that?"
 msgstr ""
-"这个场景中，扮演东方人类的AI接到指示，将在通路处组成一道防线，尽可能地拖住兽"
+"这幕场景中，扮演东方人类的AI接到指示，将在通路处组成一道防线，尽可能地拖住兽"
 "人。你想亲自控制兽人阵营，还是让默认（RCA）AI来控制？"
 
 #. [option]
@@ -621,6 +621,26 @@ msgstr "小心点，远离那头龙。他很卑鄙。"
 
 #. [event]
 #: data/ai/micro_ais/scenarios/dragon.cfg:84
+#, fuzzy
+#| msgid ""
+#| "Hi there. I am Rowck and here is what I do:\n"
+#| "When hungry, I move around part of the map in a random wander until I get "
+#| "into range of an enemy. If enemies are within range, I attack and devour "
+#| "the weakest of them. After that, I retreat to my rest location, where I "
+#| "stay for a certain number of turns or until fully healed.\n"
+#| "A few details (features, not bugs, but can be changed if desired):\n"
+#| "- If my way home is blocked on the return, the normal RCA AI takes over "
+#| "my behavior.\n"
+#| "- I will, however, attack any enemy occupying my rest hex, if I can get "
+#| "there.\n"
+#| "- A kill only makes me go home when I am the attacker, not as defender.\n"
+#| "- Occasionally I will not move at all while wandering (a dragon has to "
+#| "rest sometimes!)\n"
+#| "\n"
+#| "Note: The Hunter AI is coded as a Micro AI. A Micro AI can be added and "
+#| "adapted to the need of a scenario easily using only WML and the "
+#| "[micro_ai] tag. Check out the <span color='#00A000'>Micro AI wiki page</"
+#| "span> at https://wiki.wesnoth.org/Micro_AIs for more information."
 msgid ""
 "Hi there. I am Rowck and here is what I do:\n"
 "When hungry, I move around part of the map in a random wander until I get "
@@ -775,6 +795,22 @@ msgstr "关闭阵营1的人类控制"
 
 #. [event]
 #: data/ai/micro_ais/scenarios/goto.cfg:413
+#, fuzzy
+#| msgid ""
+#| "This scenario demonstrates a variety of different uses of the Goto Micro "
+#| "AI. All AI sides are controlled by this MAI in one way or another (except "
+#| "for the saurians, which are run by the Lurkers Micro AI). Messages will "
+#| "be displayed throughout the scenario to point out what the units are "
+#| "doing.\n"
+#| "\n"
+#| "The player controls Side 1. There are right-click context menu options "
+#| "for adding Side 1 units to the map and for taking them off again. This is "
+#| "useful mostly for testing how the Side 3 guardians react.\n"
+#| "\n"
+#| "Note: The Goto AI is coded as a Micro AI. A Micro AI can be added and "
+#| "adapted to the need of a scenario easily using only WML and the "
+#| "[micro_ai] tag. Check out the <span color='#00A000'>Micro AI wiki page</"
+#| "span> at https://wiki.wesnoth.org/Micro_AIs for more information."
 msgid ""
 "This scenario demonstrates a variety of different uses of the Goto Micro AI. "
 "All AI sides are controlled by this MAI in one way or another (except for "
@@ -792,7 +828,7 @@ msgid ""
 msgstr ""
 "此场景将演示Goto微AI的各种不同用例。所有AI阵营均由此微AI通过各种方式控制（蜥"
 "蜴人除外，他们由潜伏者微AI控制）。用于指出这些单位所执行的行动的信息将贯穿整"
-"个场景。\n"
+"幕场景。\n"
 "\n"
 "玩家控制阵营1。右击上下文菜单中提供了在地图上添加及移除阵营1单位的选项。这主"
 "要用于测试阵营3守卫的反应模式。\n"
@@ -1391,7 +1427,7 @@ msgid ""
 "moving off castle tiles to allow for recruiting) and the Messenger Escort AI "
 "which takes over after that.  A Micro AI can be added and adapted to the "
 "need of a scenario easily using only WML and the [micro_ai] tag. Check out "
-"the <span color='#00A000'>Micro AI wiki page</span> at http://wiki.wesnoth."
+"the <span color='#00A000'>Micro AI wiki page</span> at https://wiki.wesnoth."
 "org/Micro_AIs for more information."
 msgstr ""
 "那边那个游寇会逃往东南方的城堡主楼。他只会在那里征募三回合，而后便会开始移"
@@ -1564,9 +1600,9 @@ msgid ""
 "enemy within their reach. If no enemy is in reach, the lurker does a random "
 "move instead - or it just sits and waits (lurks)."
 msgstr ""
-"在此场景中演示潜伏者微AI。潜伏者是一个可以在绝大多数地形上移动，但只会在特定"
-"的地形上停留及发起进攻的单位。它也可能具有在此种地形上匿踪的能力（这也是这个"
-"AI被称为潜伏者AI的原因）。\n"
+"在此场景中演示潜伏者微AI。潜伏者是一个可以在大多数地形上移动，但只会在特定的"
+"地形上停留及发起进攻的单位。它也可能具有在此种地形上匿踪的能力（这也是这个AI"
+"被称为潜伏者AI的原因）。\n"
 "\n"
 "潜伏者各自为战而没有任何战略可言，他们总是会进攻自身攻击范围内最弱的敌人。如"
 "果该范围内没有敌人，那么潜伏者就会进行随机移动——或者就坐在原地等待（潜伏）。"
@@ -1611,6 +1647,17 @@ msgstr "注"
 
 #. [event]
 #: data/ai/micro_ais/scenarios/lurkers.cfg:465
+#, fuzzy
+#| msgid ""
+#| "You can use the right-click context menu to add additional lurkers.\n"
+#| "\n"
+#| "Any unit not adjacent to swamp (and water, for the nagas) is safe from "
+#| "the lurkers, thus it is easy to keep Pekzs from being attacked.\n"
+#| "\n"
+#| "The Lua Lurker AI is coded as a Micro AI. A Micro AI can be added and "
+#| "adapted to the need of a scenario easily using only WML and the "
+#| "[micro_ai] tag. Check out the <span color='#00A000'>Micro AI wiki page</"
+#| "span> at https://wiki.wesnoth.org/Micro_AIs for more information."
 msgid ""
 "You can use the right-click context menu to add additional lurkers.\n"
 "\n"
@@ -1712,6 +1759,24 @@ msgstr ""
 
 #. [event]
 #: data/ai/micro_ais/scenarios/messenger_escort.cfg:139
+#, fuzzy
+#| msgid ""
+#| "The Messenger Escort AI will try to move the dragoon messenger to the "
+#| "signpost in the north, while protecting him as well as possible with the "
+#| "other units. Vanak's orcs need to stop him.\n"
+#| "\n"
+#| "Note that the messenger route is set up through a series of waypoints "
+#| "here simply to demonstrate how to use waypoints. On this map, using only "
+#| "a single waypoint at the end of the route would work just as well (or "
+#| "probably even better).\n"
+#| "\n"
+#| "Also note that the messenger does not have to get exactly to each "
+#| "signpost (except for the last one), getting close is good enough.\n"
+#| "\n"
+#| "The Messenger Escort AI is coded as a Micro AI. A Micro AI can be added "
+#| "and adapted to the need of a scenario easily using only WML and the "
+#| "[micro_ai] tag. Check out the <span color='#00A000'>Micro AI wiki page</"
+#| "span> at https://wiki.wesnoth.org/Micro_AIs for more information."
 msgid ""
 "The Messenger Escort AI will try to move the dragoon messenger to the "
 "signpost in the north, while protecting him as well as possible with the "
@@ -2158,7 +2223,13 @@ msgid ""
 msgstr ""
 "如果你没有修改任何场景代码，那么阵营1将使用随机征募微AI，其中给予剑士和农民比"
 "其他单位更高的几率，而法师的几率则居中。这并不能作为良好的征募模式，而指示作"
-"为AI使用方法的演示而已。"
+"为AI使用方法的演示而已。\n"
+"\n"
+"阵营2使用了一波流征募微AI（此微AI也用在试验性AI中）。\n"
+"\n"
+"仅使用WML和[micro_ai]标签即可很容易地将微AI加入场景中，并根据场景的需要进行适"
+"配。请查看<span color='#00A000'>微AI的wiki页面</span>（http://wiki.wesnoth."
+"org/Micro_AIs）以获得更多信息。"
 
 #. [test]: id=micro_ai_test
 #: data/ai/micro_ais/scenarios/scenario_micro_ai.cfg:5
@@ -2651,6 +2722,27 @@ msgstr "放置阵营2的蝙蝠"
 
 #. [event]
 #: data/ai/micro_ais/scenarios/swarm.cfg:137
+#, fuzzy
+#| msgid ""
+#| "This scenario features bats moving around in a swarm. Without adjacent "
+#| "enemies, they simply try to stay together and at a certain distance from "
+#| "enemies. However, if an enemy unit is close to any bat, the swarm "
+#| "scatters. This is particular fun to watch when one places an enemy unit "
+#| "in the middle of the swarm. After being scattered, the swarm members "
+#| "slowly rejoin, but not in a very organized way. Sub-swarms or individual "
+#| "bats might roam around for quite some time before they find their way "
+#| "back. It is also possible that individual bats (or small groups) split "
+#| "off from the larger swarm at times.\n"
+#| "\n"
+#| "The player controls a side of gryphons, each of which is given 99 moves "
+#| "so that the reaction of the swarm to enemies can be tested easily. There "
+#| "are also several right-click options, for example for adding bats or "
+#| "gryphons or for taking units off the map.\n"
+#| "\n"
+#| "Note: The Swarm AI is coded as a Micro AI. A Micro AI can be added and "
+#| "adapted to the need of a scenario easily using only WML and the "
+#| "[micro_ai] tag. Check out the <span color='#00A000'>Micro AI wiki page</"
+#| "span> at https://wiki.wesnoth.org/Micro_AIs for more information."
 msgid ""
 "This scenario features bats moving around in a swarm. Without adjacent "
 "enemies, they simply try to stay together and at a certain distance from "
@@ -2758,7 +2850,7 @@ msgstr ""
 "狼会试图加入不完整的狼群或与其他独狼组成新的狼群。在场景中途进入地图的新的独"
 "狼的行为同样如此。\n"
 "\n"
-"其次，此处狼群不会主动狩猎。在绝大多数情况下它们只是在游荡（通常是长距离游"
+"其次，此处狼群不会主动狩猎。在大多数情况下它们只是在游荡（通常是长距离游"
 "荡）。但是，只要攻击行为不会把狼群分散到相距几格以上的位置上去，狼群就会凶猛"
 "地攻击任何进入攻击范围的敌方单位。共同行动，或是与分配到本狼群的新狼汇合，是"
 "唯二优先级高于满足狼群嗜血本能的事。\n"
