--- a/po/wesnoth-manual/zh_CN.po
+++ b/po/wesnoth-manual/zh_CN.po
@@ -1,5 +1,5 @@
 # The Battle for Wesnoth - Simplified Chinese Translations
-# Copyright (C) 2005-2018 Wesnoth development team
+# Copyright (C) 2005-2019 Wesnoth development team
 # This file is distributed under the same license as the Battle for Wesnoth package.
 # sylecn <sylecn@yahoo.com.cn>, 2009.
 # CloudiDust <cloudidust@gmail.com>, 2010.
@@ -9,14 +9,14 @@ msgid ""
 msgstr ""
 "Project-Id-Version: wesnoth-1.14\n"
 "POT-Creation-Date: 2018-02-12 20:02+0300\n"
-"PO-Revision-Date: 2018-07-08 21:16+0800\n"
+"PO-Revision-Date: 2019-02-04 16:50+0800\n"
 "Last-Translator: CloudiDust <cloudidust@gmail.com>\n"
 "Language-Team: Wesnoth Simplified Chinese Team\n"
 "Language: zh_CN\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Poedit 2.0.8\n"
+"X-Generator: Poedit 2.2.1\n"
 
 #. type: Attribute 'lang' of: <book>
 #: doc/manual/manual.en.xml:6
@@ -193,7 +193,7 @@ msgstr ""
 "基于游戏的需要，这些种族分组形成了派系：例如，兽人与巨魔常常合作，而精灵、矮"
 "人与人类常常合作。一些其他派系代表着人类社会内部的分歧——例如保王党人与流寇之"
 "争。在大部分战役中，您将控制单一派系的部队。但有时不同派系会互相结盟，所以也"
-"有可能面对在同一个场景中控制好几个派系的情况。"
+"有可能面对在同一幕场景中控制好几个派系的情况。"
 
 #. type: Content of: <book><chapter><section><title>
 #: doc/manual/manual.en.xml:82
@@ -292,7 +292,7 @@ msgstr ""
 "级：容易，中等（普通），以及困难。我们推荐中等难度，因为此难度有挑战性但不会"
 "太难。一旦开始战役，在中途您不能改变游戏难度。如果您在攻关简单难度时遇到严重"
 "的麻烦，关于<link linkend=\"basic_strategy\">基本战略</link>的指南一定会有"
-"用。选择难度之后，您将会从战役的第一个场景开始游戏。"
+"用。选择难度之后，您将会从战役的第一幕场景开始游戏。"
 
 #. type: Content of: <book><chapter><section><variablelist><varlistentry><term>
 #: doc/manual/manual.en.xml:135
@@ -310,7 +310,7 @@ msgid ""
 msgstr ""
 "点击此按钮以玩单独的场景并对抗一个或者多个对手。您可以选择在因特网上游戏或者"
 "在您的计算机上游戏，可以和计算机对手对战也可以和人类对手对战。选择此按钮后会"
-"弹出一个对话框，让您选择该如何玩这个场景。更多信息请参考<link linkend="
+"弹出一个对话框，让您选择该如何玩这幕场景。更多信息请参考<link linkend="
 "\"scenarios\">场景</link>。"
 
 #. type: Content of: <book><chapter><section><variablelist><varlistentry><term>
@@ -506,9 +506,9 @@ msgid ""
 "the next, so you don&#8217;t lose units you don&#8217;t use."
 msgstr ""
 "战役是一系列的战斗，并有着一条联系各场战斗的故事线。典型的战役拥有大约10到20"
-"个场景。战役的一大优点是允许您培养自己的部队。当您完成一个场景时，最终存活下"
-"来的单位都会被保留到下个场景供您调遣。即使您决定在某个场景中完全不使用某个单"
-"位，它也会被带到下个场景，所以不使用的单位是不会损失掉的。"
+"幕场景。战役的一大优点是允许您培养自己的部队。当您完成一幕场景时，最终存活下"
+"来的单位都会被保留到下幕场景供您调遣。即使您决定在某幕场景中完全不使用某个单"
+"位，它也会被带到下幕场景，所以不使用的单位是不会损失掉的。"
 
 #. type: Content of: <book><chapter><section><section><simpara>
 #: doc/manual/manual.en.xml:290
@@ -534,7 +534,7 @@ msgid ""
 "players either over the internet or at your computer. Scenarios are accessed "
 "through the \"Multiplayer\" button on the main menu."
 msgstr ""
-"要完成单个场景需要30分钟到2小时不等。这是最快的游戏方式，不过您的单位不会被保"
+"要完成单幕场景需要30分钟到2小时不等。这是最快的游戏方式，不过您的单位不会被保"
 "留，而且您不能使用战役中的单位。在玩场景时，您可以和计算机对战或者和其他玩家"
 "对战，可以通过因特网玩，也可以仅仅在您的计算机上玩。要玩场景游戏，请点击主菜"
 "单上的“多人游戏”按钮。"
@@ -613,7 +613,7 @@ msgstr "登录"
 #| "current username. You cannot use a registered name without the password."
 msgid ""
 "This will be your name on the multiplayer server. If you have an account on "
-"the <ulink url=\"http://www.wesnoth.org/forum\">Wesnoth forums</ulink>, you "
+"the <ulink url=\"https://www.wesnoth.org/forum\">Wesnoth forums</ulink>, you "
 "may use the same username and password for joining the official server. A "
 "password box will pop up if a password is required for the current username. "
 "You cannot use a registered name without the password."
@@ -666,7 +666,7 @@ msgstr ""
 #| "\">Multiplayer servers</ulink>."
 msgid ""
 "A complete list of official and user setup servers is listed at this "
-"website: <ulink url=\"http://wesnoth.org/wiki/MultiplayerServers"
+"website: <ulink url=\"https://wesnoth.org/wiki/MultiplayerServers"
 "\">Multiplayer servers</ulink>."
 msgstr ""
 "此网站上有一份完整的官方和用户设立的服务器列表：<ulink url=\"https://wiki."
@@ -773,7 +773,7 @@ msgid ""
 "Around the map are various elements which provide useful information about "
 "the game and are described in more detail below."
 msgstr ""
-"不论是玩单个场景还是战役，游戏界面的基本布局都是一样的。屏幕的大部分被地图所"
+"不论是玩单幕场景还是战役，游戏界面的基本布局都是一样的。屏幕的大部分被地图所"
 "覆盖，地图上会把游戏中发生的所有行动都表现出来。地图周围是各种用于提供和游戏"
 "有关的有用信息的界面元素。下面将详细介绍。"
 
@@ -952,7 +952,7 @@ msgid ""
 "in a similar way to recruiting. Recalled troops are often more experienced "
 "than recruits and usually a better choice."
 msgstr ""
-"每个场景通关后，您所有的剩余部队都会自动保留。在下个场景开始时您可以召回他"
+"每幕场景通关后，您所有的剩余部队都会自动保留。在下幕场景开始时您可以召回他"
 "们，操作与征募类似。召回的部队通常比新兵更有经验，因此常常是更好的选择。"
 
 #. type: Content of: <book><chapter><section><section><title>
@@ -1004,7 +1004,7 @@ msgid ""
 "rescuing someone, or solving a puzzle, or holding out against a siege until "
 "a certain number of turns have elapsed."
 msgstr ""
-"注意每个场景开始前弹出的目标窗口。通常击杀所有敌方首领后，您就能取得胜利，而"
+"注意每幕场景开始前弹出的目标窗口。通常击杀所有敌方首领后，您就能取得胜利，而"
 "只有当您的首领被杀时您才会失败。但是有些场景可能有其他胜利目标——例如，让您的"
 "首领到达指定地点，或者救出某人，或者解决一个迷题，或者在被围攻时坚守城池直到"
 "撑过一定回合数。"
@@ -1043,8 +1043,8 @@ msgid ""
 "section on the <link linkend=\"game_screen\">game screen</link>."
 msgstr ""
 "您的部队并不是免费打仗的。征募单位时要花钱，维持军队运作也要花钱。在开始每个"
-"场景时，您的金币都是从上个场景中带过来的（虽然说如果您在上个场景中金币所剩无"
-"几，那么每个场景都会保证您的起始金币数为一个设定好的下限。）。您可以通过尽早"
+"场景时，您的金币都是从上幕场景中带过来的（虽然说如果您在上幕场景中金币所剩无"
+"几，那么每幕场景都会保证您的起始金币数为一个设定好的下限。）。您可以通过尽早"
 "完成场景目标来获得金钱奖励，在场景中占领村庄也可以提供收入。每座由您控制的村"
 "庄每回合提供2枚金币。当场景开始时，通常您应该尽可能多地控制村庄以获得足够的收"
 "入来支撑战争。如<link linkend=\"game_screen\">游戏界面</link>小节所述，您可以"
@@ -1065,8 +1065,8 @@ msgid ""
 "Just remember, a good Battle for Wesnoth player never needs to save during a "
 "scenario. However, most beginners tend to do so rather often."
 msgstr ""
-"每个场景开始时，您的游戏状态通常都会被自动保存。如果您被击败了，可以读档再"
-"来。一旦通关成功，游戏将提示您保存并进入下个场景。如果玩到一半时要停止，可以"
+"每幕场景开始时，您的游戏状态通常都会被自动保存。如果您被击败了，可以读档再"
+"来。一旦通关成功，游戏将提示您保存并进入下幕场景。如果玩到一半时要停止，可以"
 "先保存您的回合，日后读档继续玩。但是要记住，优秀的韦诺之战玩家永远不需要在场"
 "景的中途存档。然而，很多新手开始时会倾向于经常这样做。"
 
@@ -1700,7 +1700,7 @@ msgstr ":"
 #| msgid ""
 #| "<ulink url=\"https://wiki.wesnoth.org/CommandMode\">Command mode</ulink>"
 msgid ""
-"<ulink url=\"http://www.wesnoth.org/wiki/CommandMode\">Command mode</ulink>"
+"<ulink url=\"https://www.wesnoth.org/wiki/CommandMode\">Command mode</ulink>"
 msgstr "<ulink url=\"https://wiki.wesnoth.org/CommandMode\">命令模式</ulink>"
 
 #. type: Content of: <book><chapter><section><table><tgroup><tbody><row><entry>
@@ -1837,7 +1837,7 @@ msgid ""
 msgstr ""
 "战斗开始前每个阵营都会获得一定数量的金币，以后每回合获得2枚金币。每座该阵营所"
 "控制的村庄额外提供2枚金币。在战役中，起始资金的最小值由场景决定，通常这个值随"
-"着难度的提升而变小。此外，您也能经常从所玩的前一个场景中带来一部分金币。具体"
+"着难度的提升而变小。此外，您也能经常从所玩的前一幕场景中带来一部分金币。具体"
 "的携带比例由场景决定，且通常会作为场景目标的一部分显示出来。"
 
 #. type: Content of: <book><chapter><section><section><title>
@@ -1892,7 +1892,7 @@ msgid ""
 "previous scenarios. Recalling costs 20 pieces of gold per unit. See <link "
 "linkend=\"unit_recall\">recalling units</link> for more information."
 msgstr ""
-"右击城堡的一个空格，并选择“召回”，以召回上个场景中的单位。召回的花费是每单位"
+"右击城堡的一个空格，并选择“召回”，以召回上幕场景中的单位。召回的花费是每单位"
 "20金币。参阅<link linkend=\"unit_recall\">召回单位</link>以获取更多信息。"
 
 #. type: Content of: <book><chapter><section><section><title>
@@ -2903,7 +2903,7 @@ msgstr ""
 #. type: Content of: <book><chapter><section><section><variablelist><varlistentry><term>
 #: doc/manual/manual.en.xml:2091
 msgid "Nightstalk"
-msgstr "夜行"
+msgstr "夜遁"
 
 #. type: Content of: <book><chapter><section><section><variablelist><varlistentry><listitem><simpara>
 #: doc/manual/manual.en.xml:2095
@@ -3067,7 +3067,7 @@ msgid ""
 "previous Level, Experience Points, (sometimes) any magic items acquired, and "
 "will arrive with full hitpoints."
 msgstr ""
-"当您完成一个场景后，所有存活下来的单位都可以在下个场景召回。刚被征募或召回的"
+"当您完成一幕场景后，所有存活下来的单位都可以在下幕场景召回。刚被征募或召回的"
 "单位在出现的那一回合不能移动或者进攻。被召回的单位保留原来的等级、经验值、"
 "（有时会有）取得的魔法道具，并且以生命值全满的状态出现。"
 
@@ -3140,9 +3140,9 @@ msgid ""
 "reflected in both the path that is displayed for your unit and the hexes it "
 "may move to on the current turn."
 msgstr ""
-"绝大多数的单位都会产生“控制区域”，该区域会影响您的单位所能到达的格子以及它所"
-"选择的路径。这些限制将自动反映在移动您的单位时所显示的路径以及它在当前回合所"
-"能到达的格子上。"
+"大多数的单位都会产生“控制区域”，该区域会影响您的单位所能到达的格子以及它所选"
+"择的路径。这些限制将自动反映在移动您的单位时所显示的路径以及它在当前回合所能"
+"到达的格子上。"
 
 #. type: Content of: <book><chapter><section><section><title>
 #: doc/manual/manual.en.xml:2314
@@ -3499,9 +3499,9 @@ msgid ""
 "are very resistant to blade and piercing weapon but very vulnerable to "
 "impact attacks and arcane attacks."
 msgstr ""
-"例如：龙人的鳞片可以在绝大多数攻击类型下保护他们，但是对穿刺武器和冰寒武器就"
-"无能为力。人类骑兵总的来说被保护得很好，但防不住穿刺攻击是他们的弱点。亡灵对"
-"刃器和穿刺武器的抗性很高，但却很容易受到冲击攻击和奥术攻击的伤害。"
+"例如：龙人的鳞片可以在大多数攻击类型下保护他们，但是对穿刺武器和冰寒武器就无"
+"能为力。人类骑兵总的来说被保护得很好，但防不住穿刺攻击是他们的弱点。亡灵对刃"
+"器和穿刺武器的抗性很高，但却很容易受到冲击攻击和奥术攻击的伤害。"
 
 #. type: Content of: <book><chapter><section><section><simpara>
 #: doc/manual/manual.en.xml:2537
