--- a/po/wesnoth-trow/zh_CN.po
+++ b/po/wesnoth-trow/zh_CN.po
@@ -1,5 +1,5 @@
 # The Battle for Wesnoth - Simplified Chinese Translations
-# Copyright (C) 2005-2018 Wesnoth development team
+# Copyright (C) 2005-2019 Wesnoth development team
 # This file is distributed under the same license as the Battle for Wesnoth package.
 # jan2xue <75jan@163.com>, 2005.
 # Huang Huan <unicon221@gmail.com>, 2005.
@@ -13,9 +13,9 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: wesnoth-1.14\n"
-"Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
+"Report-Msgid-Bugs-To: https://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2018-02-04 16:40 UTC\n"
-"PO-Revision-Date: 2018-07-08 21:26+0800\n"
+"PO-Revision-Date: 2019-02-07 18:03+0800\n"
 "Last-Translator: CloudiDust <cloudidust@gmail.com>\n"
 "Language-Team: Wesnoth Simplified Chinese Team\n"
 "Language: zh_CN\n"
@@ -23,7 +23,7 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=n>1;\n"
-"X-Generator: Poedit 2.0.8\n"
+"X-Generator: Poedit 2.2.1\n"
 
 #. [scenario]: id=22_The_Rise_of_Wesnoth
 #. [campaign]: id=The_Rise_of_Wesnoth
@@ -81,8 +81,10 @@ msgstr ""
 
 #. [campaign]: id=The_Rise_of_Wesnoth
 #: data/campaigns/The_Rise_Of_Wesnoth/_main.cfg:26
+#, fuzzy
+#| msgid "(Hard level, 24 scenarios.)"
 msgid "(Expert level, 24 scenarios.)"
-msgstr "（专家级别，24幕场景。）"
+msgstr "（困难级别，24幕场景。）"
 
 #. [about]
 #: data/campaigns/The_Rise_Of_Wesnoth/_main.cfg:29
@@ -1621,6 +1623,8 @@ msgstr ""
 
 #. [message]: speaker=Prince Haldric
 #: data/campaigns/The_Rise_Of_Wesnoth/scenarios/05_The_Oldwood.cfg:240
+#, fuzzy
+#| msgid "We will help."
 msgid "We will help. "
 msgstr "我们会帮忙的。"
 
@@ -2408,8 +2412,8 @@ msgid ""
 msgstr ""
 "那一天，许多优秀战士的热血洒在了这片冻土上。但是兽人仍然步步紧逼。国王没有留"
 "下继承人，其他的贵族已经逃到南湾去了。我们正抓紧时间转移剩余的平民。军队的浴"
-"血奋战给我们争取了时间，几乎所有的平民和绝大多数的过冬储备已经运到了南湾，那"
-"儿现在挤满了各处而来的难民。"
+"血奋战给我们争取了时间，几乎所有的平民和大多数的过冬储备已经运到了南湾，那儿"
+"现在挤满了各处而来的难民。"
 
 #. [message]: speaker=Commander Aethyr
 #: data/campaigns/The_Rise_Of_Wesnoth/scenarios/08_Clearwater_Port.cfg:312
@@ -6906,3 +6910,6 @@ msgid ""
 "That is excellent news indeed. Our numbers have doubled. Now on to the "
 "business at hand."
 msgstr "这确实是个好消息。我们的人数增加了一倍。现在继续完成手头的工作。"
+
+#~ msgid "Yetis"
+#~ msgstr "雪人"
