--- a/po/wesnoth-dw/zh_CN.po
+++ b/po/wesnoth-dw/zh_CN.po
@@ -1,5 +1,5 @@
 # The Battle for Wesnoth - Simplified Chinese Translations
-# Copyright (C) 2005-2018 Wesnoth development team
+# Copyright (C) 2005-2019 Wesnoth development team
 # This file is distributed under the same license as the Battle for Wesnoth package.
 # MrKing <yideey@gmail.com>, 2011.
 # CloudiDust <cloudidust@gmail.com>, 2017.
@@ -7,9 +7,9 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: wesnoth-1.14\n"
-"Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
+"Report-Msgid-Bugs-To: https://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2018-02-12 17:01 UTC\n"
-"PO-Revision-Date: 2018-07-08 20:33+0800\n"
+"PO-Revision-Date: 2019-02-07 14:39+0800\n"
 "Last-Translator: CloudiDust <cloudidust@gmail.com>\n"
 "Language-Team: Wesnoth Simplified Chinese Team\n"
 "Language: zh_CN\n"
@@ -17,7 +17,7 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=n>1;\n"
-"X-Generator: Poedit 2.0.8\n"
+"X-Generator: Poedit 2.2.1\n"
 
 #. [campaign]: id=Dead_Water
 #: data/campaigns/Dead_Water/_main.cfg:13
@@ -130,9 +130,9 @@ msgid ""
 msgstr ""
 "在遥远的西方，多斯山脉与海岸相接之处，有一个窄口的海湾。海湾里的水平静地拥抱"
 "着人鱼城市，礁沙城。这天然的港湾和居民们的富足让很多人眼红，但没有人能在人鱼"
-"的领域中战胜他们。在更北的地方，有座港口城市提里嘎兹。在绝大多数年份，兽人总"
-"会从那里出发，进犯礁沙城，正如春天总会下雨一般；他们又总会被驱逐回干燥的陆"
-"上，而且损失惨重，海湾里的盐水刺痛了他们的伤口。"
+"的领域中战胜他们。在更北的地方，有座港口城市提里嘎兹。在大多数年份，兽人总会"
+"从那里出发，进犯礁沙城，正如春天总会下雨一般；他们又总会被驱逐回干燥的陆上，"
+"而且损失惨重，海湾里的盐水刺痛了他们的伤口。"
 
 #. [part]
 #: data/campaigns/Dead_Water/scenarios/01_Invasion.cfg:50
@@ -937,8 +937,8 @@ msgid ""
 "Now, they were farther away from home than most merfolk ever went. Only "
 "Cylanna and a few soldiers had been farther."
 msgstr ""
-"现在，他们已经来到了比绝大多数人鱼都离家更远的地方。只有赛兰娜和一些士兵曾经"
-"去过再远方。"
+"现在，他们已经来到了比大多数人鱼都离家更远的地方。只有赛兰娜和一些士兵曾经去"
+"过再远方。"
 
 #. [side]
 #: data/campaigns/Dead_Water/scenarios/04_Slavers.cfg:86
