--- a/po/wesnoth-sotbe/zh_CN.po
+++ b/po/wesnoth-sotbe/zh_CN.po
@@ -1,5 +1,5 @@
 # The Battle for Wesnoth - Simplified Chinese Translations
-# Copyright (C) 2005-2018 Wesnoth development team
+# Copyright (C) 2005-2019 Wesnoth development team
 # This file is distributed under the same license as the Battle for Wesnoth package.
 # IkathrioLionheart <axalaraflameheart@163.com>, 2012.
 # CloudiDust <cloudidust@gmail.com>, 2017.
@@ -7,9 +7,9 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: wesnoth-1.14\n"
-"Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
+"Report-Msgid-Bugs-To: https://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2018-03-17 18:31 UTC\n"
-"PO-Revision-Date: 2018-07-08 21:23+0800\n"
+"PO-Revision-Date: 2019-02-07 17:58+0800\n"
 "Last-Translator: CloudiDust <cloudidust@gmail.com>\n"
 "Language-Team: Wesnoth Simplified Chinese Team\n"
 "Language: zh_CN\n"
@@ -17,7 +17,7 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=n>1;\n"
-"X-Generator: Poedit 2.0.8\n"
+"X-Generator: Poedit 2.2.1\n"
 
 #. [campaign]: id=Son_of_the_Black-Eye
 #: data/campaigns/Son_Of_The_Black_Eye/_main.cfg:9
@@ -545,21 +545,29 @@ msgstr "明白。"
 
 #. [objective]: condition=win
 #: data/campaigns/Son_Of_The_Black_Eye/scenarios/02_The_Human_Army.cfg:212
+#, fuzzy
+#| msgid "Resist until your people are ready to go (turn 12)"
 msgid "Resist until your people are ready to go (Turn 12)"
-msgstr "抵抗到你的人做好撤离准备"
+msgstr "坚持抵抗，直到你的人民做好出发准备（第12回合）"
 
 #. [objective]: condition=win
 #: data/campaigns/Son_Of_The_Black_Eye/scenarios/02_The_Human_Army.cfg:215
+#, fuzzy
+#| msgid "Resist until your people are ready to go (turn 13)"
 msgid "Resist until your people are ready to go (Turn 13)"
-msgstr "抵抗到你的人做好撤离准备"
+msgstr "坚持抵抗，直到你的人民做好出发准备（第13回合）"
 
 #. [objective]: condition=win
 #: data/campaigns/Son_Of_The_Black_Eye/scenarios/02_The_Human_Army.cfg:218
+#, fuzzy
+#| msgid "Resist until your people are ready to go (turn 14)"
 msgid "Resist until your people are ready to go (Turn 14)"
-msgstr "抵抗到你的人做好撤离准备"
+msgstr "坚持抵抗，直到你的人民做好出发准备（第14回合）"
 
 #. [objective]: condition=win
 #: data/campaigns/Son_Of_The_Black_Eye/scenarios/02_The_Human_Army.cfg:223
+#, fuzzy
+#| msgid "Then move Kapou’e to the signpost in the northeast"
 msgid "Then move Kapou’e to the signpost in the Northeast"
 msgstr "之后移动卡破尔至东北方路标处"
 
@@ -577,6 +585,8 @@ msgstr "该当差不多了。我们走吧！"
 
 #. [objective]: condition=win
 #: data/campaigns/Son_Of_The_Black_Eye/scenarios/02_The_Human_Army.cfg:279
+#, fuzzy
+#| msgid "Move Kapou’e to the signpost in the northeast"
 msgid "Move Kapou’e to the signpost in the Northeast"
 msgstr "移动卡破尔至东北方路标处"
 
@@ -768,8 +778,10 @@ msgstr ""
 
 #. [objective]: condition=win
 #: data/campaigns/Son_Of_The_Black_Eye/scenarios/03_Toward_Mountains_of_Haag.cfg:315
+#, fuzzy
+#| msgid "Move Kapou’e to the end of the mountains"
 msgid "Move Kapou’e to the end of the mountains or"
-msgstr "移动卡破尔至山脉尽头或"
+msgstr "移动卡破尔至山脉尽头"
 
 #. [objective]: condition=lose
 #: data/campaigns/Son_Of_The_Black_Eye/scenarios/03_Toward_Mountains_of_Haag.cfg:327
@@ -3705,13 +3717,15 @@ msgstr ""
 #. [message]: speaker=Kapou'e
 #: data/campaigns/Son_Of_The_Black_Eye/scenarios/16_The_Coward.cfg:211
 msgid "Good morning, Shan Taum!"
-msgstr "早，闪·陶姆！"
+msgstr "早啊，闪·陶姆！"
 
 # What in the frozen northlands
 #. [message]: speaker=Shan Taum
 #: data/campaigns/Son_Of_The_Black_Eye/scenarios/16_The_Coward.cfg:218
+#, fuzzy
+#| msgid "What... Kapou’e! What in the frozen Northlands are you doing here?!"
 msgid "What... Kapou’e! What in the frozen northlands are you doing here?!"
-msgstr "什么鬼……卡破尔！你没事跑大老远来这冰封的远北做什么？！"
+msgstr "什么鬼……卡破尔！冰封的北陆啊！你在这儿做啥？！"
 
 #. [message]: speaker=Kapou'e
 #: data/campaigns/Son_Of_The_Black_Eye/scenarios/16_The_Coward.cfg:223
